# DART

./: .gitignore  AI_FEATURES_GUIDE.md  DART_PROJECT_REPORT.md  DART_Presentation.html  DART_Presentation_Fixed.html  DART_Project_Report(old).md  DART_Project_Report.md  LAUNCH_INSTRUCTIONS.md  PROJECT_IMPROVEMENTS.md  README.md  README_v2.md  SECURITY.md  dart_launcher.py  dart_launcher_new.py  debug_markets.py  debug_training.py  desktop_interface_fix.py  enhancement_summary.py  final_summary.py  fix_math_html.py  main.py  pyproject.toml  test_components.py  verify_features.py
Project Report/: DART_Project_Report.md
Project report guidelines/: CHAPTER  Template.docx  CHAPTER  Template.md  Cover page.docx  Cover page.md  DECLARATION.docx  DECLARATION.md  References.docx  References.md  Semester_VII_Project_Report_Template.docx  Semester_VII_Project_Report_Template.md  Table of Contents Template.docx  Table of Contents Template.md
api/: __init__.py  deriv_client.py
config/: __init__.py  dart_config.py  settings.py
logs/: output.txt
ml/: __init__.py  auto_trader.py  deep_rl_agent.py  evaluation_monitor.py  feature_extractor.py  llm_market_analyzer.py  risk_manager.py  trading_ai.py  trading_ai_v3.py
models/: trading_model_gradient_boosting_20250627_172331.joblib  trading_model_gradient_boosting_20250627_181102.joblib  trading_model_gradient_boosting_20250627_181230.joblib  trading_model_gradient_boosting_20250627_181303.joblib  trading_model_logistic_regression_20250627_172338.joblib  trading_model_logistic_regression_20250627_181109.joblib  trading_model_logistic_regression_20250627_181309.joblib  trading_model_random_forest_20250627_172338.joblib  trading_model_random_forest_20250627_181109.joblib  trading_model_random_forest_20250627_181236.joblib  trading_model_random_forest_20250627_181309.joblib
presentation/: README.md  index.html  quickstart.html
presentation/assets/css/: animations.css  styles.css
presentation/assets/js/: animations.js  charts.js  presentation.js
tests/: __init__.py  test_imports.py
ui/: __init__.py  app.py  chart_styles.py  modern_dashboard.py  ui_theme.py
utils/: __init__.py  api_utils.py  timeframe.py
