[project]
name = "dart"
version = "0.2.0"
description = "Deep Adaptive Reinforcement Trader - An advanced AI trading system"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "customtkinter>=5.2.2",
    "matplotlib>=3.10.1",
    "mplfinance>=0.12.10b0",
    "pandas>=2.2.3",
    "python-deriv-api>=0.1.6",
    "scikit-learn>=1.6.1",
    "sv-ttk>=2.6.0",
    "ta>=0.11.0",
    "tk>=0.1.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "requests>=2.31.0",
    "textblob>=0.17.1",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

deep-learning = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "tensorboard>=2.13.0",
]

data-sources = [
    "yfinance>=0.2.0",
    "alpha-vantage>=2.3.0",
    "newsapi-python>=0.2.6",
    "tweepy>=4.14.0",
    "praw>=7.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "config", "ml", "ui", "utils"]
