[project]
name = "dart"
version = "3.0.0"
description = "DART v3.0 - State-of-the-Art Deep Adaptive Reinforcement Trader with LLM Integration"
requires-python = ">=3.14.5"
dependencies = [
    # Data Processing & Validation
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    
    # Machine Learning & Deep Learning
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
    "joblib>=1.4.2",
    
    # PyTorch Ecosystem
    "torch>=2.4.0",
    
    # Transformers & Embeddings
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.23.0",
    "tokenizers>=0.15.2",
    
    # API & Networking
    "websockets>=11.0.3",
    "httpx>=0.28.0",
    
    # LLM APIs
    "langchain>=0.2.5",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.8",
    "openai>=1.42.0",
    
    # Data Visualization
    "matplotlib>=3.9.0",
    "mplfinance>=0.12.10b0",
    "plotly>=5.20.0",
    
    # Web Dashboard
    "streamlit>=1.41.0",
    
    # Logging
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    
    # Testing
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    
    # Desktop UI
    "customtkinter>=5.2.2",
    "sv-ttk>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.1.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
]

deep-learning = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "transformers>=4.40.0",
    "sentence-transformers>=3.0.0",
    "tensorboard>=2.17.0",
    "accelerate>=1.1.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
]

llm = [
    "ollama>=0.2.0",
    "chromadb>=0.4.24",
    "langchain>=0.2.5",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.8",
    "openai>=1.42.0",
    "anthropic>=0.39.0",
    "llama-index>=0.11.0",
]

market-data = [
    "yfinance>=0.2.38",
    "alpha-vantage>=3.0.0",
    "newsapi-python>=0.2.7",
    "tweepy>=4.14.0",
    "praw>=7.8.1",
    "finnhub-python>=1.4.0",
    "polygon-api-client==1.14.2",
]

monitoring = [
    "mlflow>=2.14.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]

all = [
    "dart[dev,deep-learning,llm,market-data,monitoring]",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "config", "ml", "ui", "utils"]

[tool.black]
line-length = 120
target-version = ["py314"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | models
)/
'''

[tool.ruff]
line-length = 120
target-version = "py314"
select = ["E", "F", "W", "I", "UP", "C4"]
ignore = ["E501", "W292"]
exclude = ["models", "data", "tests"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
allow_untyped_defs = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "config", "ml", "ui", "utils"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
